--- a/public/style.css
+++ b/public/style.css
@@ -1,30 +1,39 @@
-html {
-  background-image: url("rainpaper.jpg");
-}
-
 body {
-    background: rgba(0, 0, 0, 0);
+    margin: 0;
+    padding: 0;
 }
 
-#weatherIcon {
-    width: 50%;
-    height: 10%;
+#menu {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    height: 50px;
+    background-color: #1F576C;
+    color: white;
 }
 
-.custom-card {
-    margin: 50px;
+#map {
+    width: 100vw;
+    height: calc(100vh - 50px);
+    top: 50px;
 }
 
-.container {
-    display: inline-block;
+.title {
+    font-size: 24px;
+    font-family: "Times New Roman", Times, serif;
 }
 
-.left-icon {
-    float: left;
-    width: 50%;
-    height: 100%;
-}
-
-.right-text {
-    float: right;
+.about {
+    border-color: white;
+    margin-left: 20px;
+    height: 80%;
+    width: 10%;
+    background-color: rgba(0, 0, 0, 0);
+    color: white;
+    font-size: 16px;
+    font-family: "Times New Roman", Times, serif;
 }
